--- a/schedule/lichlam.html
+++ b/schedule/lichlam.html
@@ -20,580 +20,7 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/sidebar.css">
-    <style>
-        /* Sử dụng biến màu từ sidebar.css */
-        :root {
-            --primary: #FEA116;
-            --light: #F1F8FF;
-            --dark: #0F172B;
-            --success: #10B981;
-            --warning: #F59E0B;
-            --danger: #EF4444;
-            --info: #3B82F6;
-        }
-
-        body {
-            font-family: 'Nunito', sans-serif;
-            background-color: var(--light);
-            min-height: 100vh;
-        }
-
-        /* Điều chỉnh main-content để phù hợp với sidebar */
-        .main-content {
-            margin-left: 280px;
-            transition: all 0.3s;
-            padding: 20px;
-        }
-
-        .main-content.expanded {
-            margin-left: 70px;
-        }
-
-        /* Top bar tương tự staffList.html */
-        .top-bar {
-            background: #fff;
-            padding: 1rem 2rem;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-        }
-
-        .toggle-sidebar {
-            background: none;
-            border: none;
-            color: var(--dark);
-            font-size: 1.2rem;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
-            padding: 30px;
-        }
-
-        .home-btn {
-            background-color: var(--primary);
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 8px;
-            cursor: pointer;
-            font-weight: 600;
-            text-decoration: none;
-            display: inline-flex;
-            align-items: center;
-            gap: 8px;
-            transition: background-color 0.2s, transform 0.2s;
-        }
-
-        .home-btn:hover {
-            background-color: #e8960f;
-            transform: translateY(-2px);
-        }
-
-        .header {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        .header h1 {
-            color: var(--primary);
-            font-size: 2.5em;
-            font-weight: 700;
-        }
-
-        .header p {
-            color: #6c757d;
-            font-size: 1em;
-        }
-
-        .calendar-nav {
-            display: flex;
-            justify-content: center;
-            gap: 15px;
-            margin-bottom: 25px;
-        }
-
-        .nav-btn {
-            background-color: var(--primary);
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 8px;
-            cursor: pointer;
-            font-weight: 600;
-            transition: background-color 0.2s, transform 0.2s;
-        }
-
-        .nav-btn:hover {
-            background-color: #e8960f;
-            transform: translateY(-2px);
-        }
-
-        .week-display {
-            font-size: 1.4em;
-            color: var(--primary);
-            font-weight: 600;
-            min-width: 220px;
-            text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .calendar {
-            display: grid;
-            grid-template-columns: repeat(7, 1fr);
-            gap: 10px;
-            background-color: #ffffff;
-            border-radius: 10px;
-            overflow: hidden;
-            border: 1px solid #e9ecef;
-        }
-
-        .day-header {
-            background-color: var(--primary);
-            color: white;
-            padding: 12px;
-            text-align: center;
-            font-weight: 600;
-            border-bottom: 1px solid #e8960f;
-        }
-
-        .day-cell {
-            background-color: #fefefe;
-            min-height: 140px;
-            padding: 10px;
-            border-radius: 8px;
-            border: 1px solid #e9ecef;
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-        }
-
-        .day-number {
-            font-weight: 700;
-            font-size: 18px;
-            margin-bottom: 8px;
-            color: var(--primary);
-            padding: 4px 10px;
-            border-radius: 5px;
-            background-color: rgba(254, 161, 22, 0.1);
-            display: inline-block;
-        }
-
-        .shifts-container {
-            display: flex;
-            flex-direction: column;
-            gap: 6px;
-        }
-
-        .shift-group {
-            display: flex;
-            flex-direction: column;
-            gap: 4px;
-        }
-
-        .shift-header {
-            font-size: 11px;
-            font-weight: 600;
-            color: var(--primary);
-            text-transform: uppercase;
-            margin-bottom: 2px;
-        }
-
-        .employee-card {
-            background-color: rgba(254, 161, 22, 0.08);
-            border-radius: 6px;
-            padding: 7px 12px;
-            cursor: pointer;
-            transition: background-color 0.2s, transform 0.2s;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
-        }
-
-        .employee-card:hover {
-            background-color: rgba(254, 161, 22, 0.15);
-            transform: translateY(-1px);
-        }
-
-        .employee-card.chef { border-left: 4px solid #dc3545; }
-        .employee-card.waiter { border-left: 4px solid #007bff; }
-        .employee-card.cashier { border-left: 4px solid #28a745; }
-        .employee-card.manager { border-left: 4px solid #6f42c1; }
-
-        .employee-name {
-            font-size: 13px;
-            font-weight: 500;
-            color: #343a40;
-        }
-
-        .area-tag {
-            font-size: 9px;
-            background-color: #e9ecef;
-            padding: 3px 7px;
-            border-radius: 4px;
-            color: #495057;
-            font-weight: 500;
-        }
-
-        .add-shift-btn {
-            position: fixed;
-            bottom: 30px;
-            right: 30px;
-            width: 55px;
-            height:
-            55px;
-            background-color: var(--primary);
-            color: white;
-            border: none;
-            border-radius: 50%;
-            font-size: 24px;
-            cursor: pointer;
-            box-shadow: 0 5px 15px rgba(254, 161, 22, 0.4);
-            transition: transform 0.2s, background-color 0.2s;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .add-shift-btn:hover {
-            transform: scale(1.1);
-            background-color: #e8960f;
-        }
-
-        /* Modal styles */
-        .modal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            z-index: 1000;
-            opacity: 0;
-            transition: opacity 0.3s ease-in-out;
-        }
-
-        .modal.show {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            opacity: 1;
-        }
-
-        .modal-content {
-            background-color: #ffffff;
-            padding: 25px;
-            border-radius: 10px;
-            width: 90%;
-            max-width: 450px;
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
-            border-top: 5px solid var(--primary);
-            transform: translateY(-20px);
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .modal.show .modal-content {
-            transform: translateY(0);
-        }
-
-        .modal-title {
-            color: var(--primary);
-            font-size: 1.5em;
-            font-weight: 700;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .form-group {
-            margin-bottom: 18px;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 8px;
-            color: var(--primary);
-            font-weight: 600;
-            font-size: 0.95em;
-        }
-
-        .form-group input,
-        .form-group select {
-            width: 100%;
-            padding: 10px 12px;
-            border: 1px solid #ced4da;
-            border-radius: 6px;
-            background-color: #f8f9fa;
-            color: #343a40;
-            font-size: 15px;
-            transition: border-color 0.2s, box-shadow 0.2s;
-        }
-
-        .form-group input:focus,
-        .form-group select:focus {
-            border-color: var(--primary);
-            box-shadow: 0 0 0 0.2rem rgba(254, 161, 22, 0.25);
-            outline: none;
-        }
-
-        .form-group select option {
-            background-color: #ffffff;
-            color: #343a40;
-        }
-
-        .form-actions {
-            display: flex;
-            gap: 10px;
-            justify-content: flex-end;
-            margin-top: 25px;
-        }
-
-        .btn {
-            padding: 10px 20px;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            font-weight: 600;
-            transition: transform 0.2s, background-color 0.2s;
-            font-size: 15px;
-        }
-
-        .btn:hover {
-            transform: translateY(-1px);
-        }
-
-        .btn-primary {
-            background-color: var(--primary);
-            color: white;
-        }
-
-        .btn-primary:hover {
-            background-color: #e8960f;
-        }
-
-        .btn-secondary {
-            background-color: #6c757d;
-            color: white;
-        }
-
-        .btn-secondary:hover {
-            background-color: #5a6268;
-        }
-
-        .btn-danger {
-            background-color: #dc3545;
-            color: white;
-        }
-
-        .btn-danger:hover {
-            background-color: #c82333;
-        }
-
-        /* Custom Popup styles */
-        .custom-popup {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            z-index: 2000;
-            opacity: 0;
-            transition: opacity 0.3s ease-in-out;
-        }
-
-        .custom-popup.show {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            opacity: 1;
-        }
-
-        .popup-content {
-            background-color: #ffffff;
-            padding: 25px;
-            border-radius: 10px;
-            width: 90%;
-            max-width: 380px;
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
-            text-align: center;
-            border-top: 5px solid;
-            transform: translateY(-20px);
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .custom-popup.show .popup-content {
-            transform: translateY(0);
-        }
-
-        .popup-icon {
-            font-size: 2.5em;
-            margin-bottom: 15px;
-            line-height: 1;
-        }
-
-        .popup-icon.error { border-color: #dc3545; color: #dc3545; }
-        .popup-icon.success { border-color: #28a745; color: #28a745; }
-        .popup-icon.confirm { border-color: var(--primary); color: var(--primary); }
-
-        .popup-title {
-            color: var(--primary);
-            font-size: 1.3em;
-            font-weight: 700;
-            margin-bottom: 10px;
-        }
-
-        .popup-message {
-            color: #495057;
-            font-size: 1em;
-            margin-bottom: 20px;
-        }
-
-        .popup-actions {
-            display: flex;
-            gap: 10px;
-            justify-content: center;
-        }
-
-        /* Legend styles */
-        .legend {
-            display: flex;
-            justify-content: center;
-            gap: 25px;
-            margin-top: 30px;
-            flex-wrap: wrap;
-        }
-
-        .legend-item {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            font-weight: 500;
-            color: #495057;
-            font-size: 0.95em;
-        }
-
-        .legend-item .employee-card {
-            width: 18px;
-            height: 18px;
-            border-radius: 4px;
-            padding: 0;
-            box-shadow: none;
-            cursor: default;
-            background-color: transparent;
-        }
-
-        .shift-times-table {
-            margin-top: 30px;
-            border: 1px solid #e9ecef;
-            border-radius: 8px;
-            overflow: hidden;
-            width: 100%;
-            max-width: 400px;
-            margin-left: auto;
-            margin-right: auto;
-            background-color: #ffffff;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-        }
-
-        .shift-times-table table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        .shift-times-table th,
-        .shift-times-table td {
-            padding: 12px;
-            text-align: center;
-            border-bottom: 1px solid #e9ecef;
-        }
-
-        .shift-times-table th {
-            background-color: rgba(254, 161, 22, 0.1);
-            color: var(--primary);
-            font-weight: 700;
-            text-transform: uppercase;
-            font-size: 0.9em;
-        }
-
-        .shift-times-table td {
-            background-color: #fefefe;
-            color: #343a40;
-        }
-
-        .shift-times-table tr:last-child td {
-            border-bottom: none;
-        }
-
-        select[multiple] option:checked {
-            background-color: var(--primary);
-            color: white;
-        }
-
-        /* Responsive adjustments */
-        @media (max-width: 768px) {
-            .main-content {
-                margin-left: 0;
-            }
-
-            .calendar {
-                font-size: 11px;
-                gap: 5px;
-            }
-
-            .day-cell {
-                min-height: 100px;
-                padding: 8px;
-            }
-
-            .employee-card {
-                padding: 5px 10px;
-            }
-
-            .employee-name {
-                font-size: 11px;
-            }
-
-            .modal-content {
-                padding: 20px;
-            }
-
-            .calendar-nav {
-                gap: 8px;
-            }
-
-            .week-display {
-                font-size: 1.1em;
-                min-width: 150px;
-            }
-
-            .nav-btn {
-                padding: 8px 15px;
-            }
-
-            .add-shift-btn {
-                width: 45px;
-                height: 45px;
-                font-size: 20px;
-                bottom: 15px;
-                right: 15px;
-            }
-
-            .legend {
-                gap: 15px;
-            }
-        }
-    </style>
+      <link rel="stylesheet" href="/css/lichlam.css">
 </head>
 
 <body>
