gan xong home page

--- a/home-page/html/home.html
+++ b/home-page/html/home.html
@@ -80,7 +80,7 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item" id="auth-nav-item">
                         <a class="nav-link btn-login" href="login.html">Login</a>
@@ -91,7 +91,7 @@
                                 <span id="username-display"></span>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
-                                <li><a class="dropdown-item" href="#">Chỉnh sửa thông tin</a></li>
+                                <li><a class="dropdown-item" href="profile.html">Chỉnh sửa thông tin</a></li>
                                 <li><a class="dropdown-item" href="#">Xem đơn hàng</a></li>
                                 <li><a class="dropdown-item" href="#" onclick="logout()">Đăng xuất</a></li>
                             </ul>
