--- a/home-page/html/login.html
+++ b/home-page/html/login.html
@@ -271,7 +271,7 @@
       const scopes = payload?.scope?.split(" ");
 
       if (scopes.includes("ROLE_ADMIN")) {
-        window.location.href = 'adminDashboard/adminDashboard.html';
+        window.location.href = '../../adminDashboard/adminDashboard.html';
       } else if (scopes.includes("ROLE_WAITER")) {
         window.location.href = 'waiter.html';
       } else if (scopes.includes("ROLE_CUSTOMER")) {
