--- a/adminDashboard/adminDashboard.html
+++ b/adminDashboard/adminDashboard.html
@@ -370,7 +370,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link" onclick="showCustomerManagement()">
+                    <a href="adminDashboardUser.html" class="nav-link" onclick="showCustomerManagement()">
                         <i class="fas fa-users"></i>
                         <span>Quản lý khách hàng</span>
                     </a>
