--- a/home-page/html/cart.html
+++ b/home-page/html/cart.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;600&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Shared CSS -->
@@ -106,7 +103,6 @@
         }
 
         @media (max-width: 576px) {
-
             .cart-table th,
             .cart-table td {
                 font-size: 0.85rem;
@@ -124,14 +120,12 @@
         }
     </style>
 </head>
-
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="home.html">FoodHub</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -146,7 +140,7 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="home.html#contact">Contact</a>
+                        <a class="nav-link" href="cart.html">Contact</a>
                     </li>
                     <li class="nav-item" id="auth-nav-item">
                         <a class="nav-link btn-login" href="login.html">Login</a>
@@ -232,10 +226,8 @@
     <script src="../js/auth.js"></script>
     <!-- Page-specific JS -->
     <script>
-        // API base URL (adjust to match your backend)
-        const API_BASE_URL = 'http://localhost:8080';
-
-        async function loadCart() {
+        // Hàm tải giỏ hàng từ local storage
+        function loadCart() {
             if (!isLoggedIn()) {
                 document.getElementById('cart-empty').classList.remove('d-none');
                 document.getElementById('cart-content').classList.add('d-none');
@@ -243,152 +235,91 @@
                 return;
             }
 
-            const token = localStorage.getItem('accessToken');
-            try {
-                const response = await fetch(`${API_BASE_URL}/api/cart`, {
-                    method: 'GET',
-                    headers: {
-                        'Authorization': `Bearer ${token}`,
-                        'Content-Type': 'application/json'
-                    },
-                    credentials: 'include'
-                });
+            const cart = JSON.parse(localStorage.getItem('cart')) || [];
+            const cartItemsContainer = document.getElementById('cart-items');
+            const cartTotalElement = document.getElementById('cart-total');
+            let total = 0;
 
-                if (!response.ok) {
-                    if (response.status === 401) {
-                        alert('Session expired. Please log in again.');
-                        logout();
-                        return;
-                    }
-                    throw new Error(`Failed to load cart: ${response.statusText}`);
-                }
-
-                const cartItems = await response.json();
-                const cartItemsContainer = document.getElementById('cart-items');
-                const cartTotalElement = document.getElementById('cart-total');
-                let total = 0;
-
-                if (cartItems.length === 0) {
-                    document.getElementById('cart-empty').classList.remove('d-none');
-                    document.getElementById('cart-content').classList.add('d-none');
-                    updateCartCount();
-                    return;
-                }
-
-                cartItemsContainer.innerHTML = '';
-                cartItems.forEach(item => {
-                    const itemTotal = item.menuItem.price * item.quantity;
-                    total += itemTotal;
-
-                    cartItemsContainer.innerHTML += `
-                        <tr>
-                            <td>${item.menuItem.name}</td>
-                            <td>${Number(item.menuItem.price).toLocaleString('vi-VN')} VND</td>
-                            <td>
-                                <button class="btn btn-outline-secondary btn-qty" onclick="updateQuantity(${item.id}, ${item.quantity - 1})">-</button>
-                                <span class="mx-2">${item.quantity}</span>
-                                <button class="btn btn-outline-secondary btn-qty" onclick="updateQuantity(${item.id}, ${item.quantity + 1})">+</button>
-                            </td>
-                            <td>${itemTotal.toLocaleString('vi-VN')} VND</td>
-                            <td>
-                                <button class="btn btn-danger btn-sm" onclick="removeItem(${item.id})">Remove</button>
-                            </td>
-                        </tr>
-                    `;
-                });
-
-                cartTotalElement.textContent = total.toLocaleString('vi-VN');
-                document.getElementById('checkout-btn').disabled = total === 0;
-                document.getElementById('cart-empty').classList.add('d-none');
-                document.getElementById('cart-content').classList.remove('d-none');
-                updateCartCount();
-            } catch (error) {
-                console.error('Error loading cart:', error);
+            if (cart.length === 0) {
                 document.getElementById('cart-empty').classList.remove('d-none');
                 document.getElementById('cart-content').classList.add('d-none');
-                document.getElementById('cart-empty').innerHTML = 'Failed to load cart. Please try again later.';
-            }
-        }
-
-        async function updateQuantity(cartId, quantity) {
-            if (!isLoggedIn()) {
-                alert('Please log in to update cart!');
-                logout();
                 return;
             }
+
+            cartItemsContainer.innerHTML = '';
+            cart.forEach(item => {
+                const itemTotal = item.price * (item.quantity || 1);
+                total += itemTotal;
+
+                cartItemsContainer.innerHTML += `
+                    <tr>
+                        <td>${item.name}</td>
+                        <td>${Number(item.price).toLocaleString('vi-VN')} VND</td>
+                        <td>
+                            <button class="btn btn-outline-secondary btn-qty" onclick="updateQuantity(${item.id}, ${item.quantity - 1})">-</button>
+                            <span class="mx-2">${item.quantity}</span>
+                            <button class="btn btn-outline-secondary btn-qty" onclick="updateQuantity(${item.id}, ${item.quantity + 1})">+</button>
+                        </td>
+                        <td>${itemTotal.toLocaleString('vi-VN')} VND</td>
+                        <td>
+                            <button class="btn btn-danger btn-sm" onclick="removeItem(${item.id})">Remove</button>
+                        </td>
+                    </tr>
+                `;
+            });
+
+            cartTotalElement.textContent = total.toLocaleString('vi-VN');
+            document.getElementById('checkout-btn').disabled = total === 0;
+            document.getElementById('cart-empty').classList.add('d-none');
+            document.getElementById('cart-content').classList.remove('d-none');
+        }
+
+        // Hàm cập nhật số lượng món ăn trong giỏ hàng
+        function updateQuantity(itemId, quantity) {
+            if (!isLoggedIn()) {
+                alert('Vui lòng đăng nhập để cập nhật giỏ hàng!');
+                window.location.href = 'login.html';
+                return;
+            }
+
+            let cart = JSON.parse(localStorage.getItem('cart')) || [];
 
             if (quantity < 1) {
-                removeItem(cartId);
+                removeItem(itemId);
                 return;
             }
 
-            const token = localStorage.getItem('accessToken');
-            try {
-                const response = await fetch(`${API_BASE_URL}/api/cart/${cartId}`, {
-                    method: 'PUT',
-                    headers: {
-                        'Authorization': `Bearer ${token}`,
-                        'Content-Type': 'application/json'
-                    },
-                    credentials: 'include',
-                    body: JSON.stringify({ quantity })
-                });
-
-                if (!response.ok) {
-                    if (response.status === 401) {
-                        alert('Session expired. Please log in again.');
-                        logout();
-                        return;
-                    }
-                    throw new Error(`Failed to update quantity: ${response.statusText}`);
-                }
-
-                await loadCart();
-            } catch (error) {
-                console.error('Error updating quantity:', error);
-                alert('Failed to update quantity. Please try again.');
+            const item = cart.find(cartItem => cartItem.id === itemId);
+            if (item) {
+                item.quantity = quantity;
+                localStorage.setItem('cart', JSON.stringify(cart));
+                loadCart();
+                updateCartCount(); // Gọi từ auth.js
+            } else {
+                alert('Món không tồn tại trong giỏ hàng.');
             }
         }
 
-        async function removeItem(cartId) {
+        // Hàm xóa món ăn khỏi giỏ hàng
+        function removeItem(itemId) {
             if (!isLoggedIn()) {
-                alert('Please log in to remove items!');
-                logout();
+                alert('Vui lòng đăng nhập để xóa món khỏi giỏ hàng!');
+                window.location.href = 'login.html';
                 return;
             }
 
-            const token = localStorage.getItem('accessToken');
-            try {
-                const response = await fetch(`${API_BASE_URL}/api/cart/${cartId}`, {
-                    method: 'DELETE',
-                    headers: {
-                        'Authorization': `Bearer ${token}`,
-                        'Content-Type': 'application/json'
-                    },
-                    credentials: 'include'
-                });
-
-                if (!response.ok) {
-                    if (response.status === 401) {
-                        alert('Session expired. Please log in again.');
-                        logout();
-                        return;
-                    }
-                    throw new Error(`Failed to remove item: ${response.statusText}`);
-                }
-
-                await loadCart();
-            } catch (error) {
-                console.error('Error removing item:', error);
-                alert('Failed to remove item. Please try again.');
-            }
+            let cart = JSON.parse(localStorage.getItem('cart')) || [];
+            cart = cart.filter(cartItem => cartItem.id !== itemId);
+            localStorage.setItem('cart', JSON.stringify(cart));
+            loadCart();
+            updateCartCount(); // Gọi từ auth.js
         }
 
+        // Khởi tạo trang
         document.addEventListener('DOMContentLoaded', () => {
-            updateUI();
+            updateUI(); // Gọi từ auth.js để cập nhật giao diện và số lượng giỏ hàng
             loadCart();
         });
     </script>
 </body>
-
 </html>
