--- a/home-page/html/contact.html
+++ b/home-page/html/contact.html
@@ -17,11 +17,7 @@
     <link href="../css/styles.css" rel="stylesheet">
     <!-- Page-specific CSS -->
     <style>
-        :root {
-            --dark-green: #1A3C34;
-            --gold: #D4A017;
-            --light-gold: #F7E6A3;
-        }
+        
 
         .hero {
             background: linear-gradient(rgba(26, 60, 52, 0.8), rgba(26, 60, 52, 0.8)), url('https://images.unsplash.com/photo-1414235077428-338989a2e8c0');
@@ -111,7 +107,7 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top"
-        style="background: linear-gradient(to right, #02052f, #D4A017);">
+        >
         <div class="container">
             <a class="navbar-brand" href="home.html" style="color: #F7E6A3;">FoodHub</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -197,7 +193,7 @@
 
     <!-- Footer -->
     <footer class="footer"
-        style="background: linear-gradient(to right, #02052f, #D4A017); color: #F7E6A3; padding: 2rem 0; text-align: center;">
+        color: #F7E6A3; padding: 2rem 0; text-align: center;>
         <div class="container">
             <h3 style="font-family: 'Playfair Display', serif; color: var(--gold);">FoodHub</h3>
             <p class="contact-info">1 FPT | Phone: (123) 456-7890 | Email: info@foodhub.com</p>
