--- a/home-page/html/profile.html
+++ b/home-page/html/profile.html
@@ -1,20 +1,37 @@
-<!-- Edit Profile Page -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Edit Profile</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
   <style>
-    .gradient-bg { background: linear-gradient(135deg, #6b7280, #4b5563); }
-    .input-focus { transition: all 0.3s ease; }
-    .input-focus:focus { transform: scale(1.02); box-shadow: 0 0 10px rgba(99, 102, 241, 0.5); }
-    .btn-hover { transition: all 0.3s ease; }
-    .btn-hover:hover { transform: translateY(-2px); box-shadow: 0 4px 12px rgba(99, 102, 241, 0.4); }
+    .gradient-bg {
+      background: linear-gradient(135deg, #6b7280, #4b5563);
+    }
+
+    .input-focus {
+      transition: all 0.3s ease;
+    }
+
+    .input-focus:focus {
+      transform: scale(1.02);
+      box-shadow: 0 0 10px rgba(99, 102, 241, 0.5);
+    }
+
+    .btn-hover {
+      transition: all 0.3s ease;
+    }
+
+    .btn-hover:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(99, 102, 241, 0.4);
+    }
   </style>
 </head>
+
 <body class="gradient-bg min-h-screen flex items-center justify-center py-12">
   <div class="container mx-auto p-6 max-w-lg">
     <div class="bg-white rounded-2xl shadow-2xl p-8">
@@ -24,12 +41,15 @@
       </div>
       <div id="error-message" class="hidden bg-red-100 text-red-700 p-3 rounded-lg mb-4 text-center"></div>
       <div id="success-message" class="hidden bg-green-100 text-green-700 p-3 rounded-lg mb-4 text-center"></div>
+
       <div id="profile-form" class="space-y-6">
+        <!-- Profile Fields -->
         <div class="relative">
           <label for="username" class="block text-sm font-semibold text-gray-700 mb-1">Username</label>
           <div class="flex items-center">
             <i class="fas fa-user absolute ml-3 text-gray-400"></i>
-            <input type="text" id="username" class="pl-10 w-full border-gray-300 rounded-lg shadow-sm input-focus" readonly>
+            <input type="text" id="username" class="pl-10 w-full border-gray-300 rounded-lg shadow-sm input-focus"
+              readonly>
           </div>
         </div>
         <div class="relative">
@@ -53,10 +73,41 @@
             <input type="text" id="address" class="pl-10 w-full border-gray-300 rounded-lg shadow-sm input-focus">
           </div>
         </div>
-        <button id="save-button" class="w-full bg-indigo-600 text-white py-3 px-4 rounded-lg font-semibold btn-hover flex items-center justify-center">
+
+        <button id="save-button"
+          class="w-full bg-indigo-600 text-white py-3 px-4 rounded-lg font-semibold btn-hover flex items-center justify-center">
           <i class="fas fa-save mr-2"></i> Save Changes
         </button>
-        <button id="logout-button" class="w-full bg-red-600 text-white py-3 px-4 rounded-lg font-semibold btn-hover flex items-center justify-center">
+
+        <hr class="my-6 border-gray-300">
+
+        <!-- Change Password -->
+        <h3 class="text-xl font-semibold text-gray-700 mb-2">Change Password</h3>
+        <div class="space-y-4">
+          <div class="relative">
+            <label for="old-password" class="block text-sm font-semibold text-gray-700 mb-1">Current Password</label>
+            <div class="flex items-center">
+              <i class="fas fa-lock absolute ml-3 text-gray-400"></i>
+              <input type="password" id="old-password"
+                class="pl-10 w-full border-gray-300 rounded-lg shadow-sm input-focus">
+            </div>
+          </div>
+          <div class="relative">
+            <label for="new-password" class="block text-sm font-semibold text-gray-700 mb-1">New Password</label>
+            <div class="flex items-center">
+              <i class="fas fa-key absolute ml-3 text-gray-400"></i>
+              <input type="password" id="new-password"
+                class="pl-10 w-full border-gray-300 rounded-lg shadow-sm input-focus">
+            </div>
+          </div>
+          <button id="change-password-button"
+            class="w-full bg-yellow-500 text-white py-3 px-4 rounded-lg font-semibold btn-hover flex items-center justify-center">
+            <i class="fas fa-edit mr-2"></i> Change Password
+          </button>
+        </div>
+
+        <button id="logout-button"
+          class="w-full bg-red-600 text-white py-3 px-4 rounded-lg font-semibold btn-hover flex items-center justify-center mt-6">
           <i class="fas fa-sign-out-alt mr-2"></i> Logout
         </button>
       </div>
@@ -162,6 +213,44 @@
       }
     }
 
+    async function changePassword() {
+      const token = localStorage.getItem('accessToken');
+      if (!isLoggedIn()) {
+        showError('Vui lòng đăng nhập!');
+        window.location.href = 'login.html';
+        return;
+      }
+
+      const request = {
+        oldPassword: document.getElementById('old-password').value,
+        newPassword: document.getElementById('new-password').value
+      };
+
+      if (!request.oldPassword || !request.newPassword) {
+        showError('Vui lòng nhập đầy đủ mật khẩu cũ và mới.');
+        return;
+      }
+
+      try {
+        const response = await fetch(`${API_BASE_URL}/users/change-password`, {
+          method: 'PUT',
+          headers: {
+            'Content-Type': 'application/json',
+            'Authorization': 'Bearer ' + token
+          },
+          body: JSON.stringify(request)
+        });
+
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.message || 'Đổi mật khẩu thất bại');
+        showSuccess(data.message || 'Đổi mật khẩu thành công!');
+        document.getElementById('old-password').value = '';
+        document.getElementById('new-password').value = '';
+      } catch (error) {
+        showError('Lỗi khi đổi mật khẩu: ' + error.message);
+      }
+    }
+
     function updateUI() {
       const token = localStorage.getItem('accessToken');
       if (!isLoggedIn()) {
@@ -178,8 +267,10 @@
     }
 
     document.getElementById('save-button').addEventListener('click', saveUserInfo);
+    document.getElementById('change-password-button').addEventListener('click', changePassword);
     document.getElementById('logout-button').addEventListener('click', logout);
     document.addEventListener('DOMContentLoaded', updateUI);
   </script>
 </body>
+
 </html>
