--- a/waiter/index.html
+++ b/waiter/index.html
@@ -567,6 +567,7 @@
         }
 
         function showDashboard() {
+            hideCartSidebar();
             if (!hasWorkSchedule) {
                 showNoWorkScheduleMessage();
                 return;
