--- a/home-page/html/register.html
+++ b/home-page/html/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,9 @@
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;600&display=swap"
+        rel="stylesheet">
     <style>
         :root {
             --dark-green: #02052f;
@@ -17,6 +20,7 @@
             --light-gold: #F7E6A3;
             --light-gray: #f8f9fa;
         }
+
         body {
             font-family: 'Montserrat', sans-serif;
             background-color: var(--light-gray);
@@ -25,6 +29,7 @@
             justify-content: center;
             align-items: center;
         }
+
         .register-section {
             background: linear-gradient(180deg, #ffffff, #f1f3f5);
             padding: 2rem;
@@ -33,6 +38,7 @@
             max-width: 500px;
             width: 100%;
         }
+
         .section-title {
             font-family: 'Playfair Display', serif;
             color: var(--dark-green);
@@ -41,15 +47,18 @@
             text-align: center;
             margin-bottom: 1.5rem;
         }
+
         .form-control {
             border: 2px solid var(--dark-green);
             border-radius: 10px;
             transition: border-color 0.3s;
         }
+
         .form-control:focus {
             border-color: var(--gold);
             box-shadow: 0 0 5px rgba(212, 160, 23, 0.3);
         }
+
         .btn-register {
             background-color: var(--dark-green);
             color: var(--gold);
@@ -57,75 +66,84 @@
             font-weight: 600;
             padding: 10px;
             width: 100%;
-            transition: all 0.3s;
+            transition: background-color 0.3s, color 0.3s, transform 0.2s;
         }
+
         .btn-register:hover {
             background-color: var(--gold);
             color: var(--dark-green);
+            transform: scale(1.02);
         }
+
         .alert {
             border-radius: 10px;
             font-size: 0.9rem;
         }
+
         @media (max-width: 768px) {
             .register-section {
                 margin: 1rem;
                 padding: 1.5rem;
             }
+
             .section-title {
                 font-size: 1.5rem;
             }
         }
     </style>
 </head>
+
 <body>
     <!-- Register Section -->
     <section id="register" class="register-section">
         <div class="container">
             <h2 class="section-title" id="form-title">Create Your Account</h2>
             <div id="alert-message"></div>
+
             <!-- Register Form -->
-            <form id="register-form" class="d-block">
+            <form id="register-form" class="d-block" novalidate>
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username" required minlength="5" maxlength="255">
+                    <input type="text" class="form-control" id="username" name="username"
+                        placeholder="Enter your username" required minlength="5" maxlength="255">
                     <div class="invalid-feedback">Username must be 5-255 characters.</div>
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required minlength="8" maxlength="255">
+                    <input type="password" class="form-control" id="password" name="password"
+                        placeholder="Enter your password" required minlength="8" maxlength="255">
                     <div class="invalid-feedback">Password must be at least 8 characters.</div>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email address" required maxlength="255">
+                    <input type="email" class="form-control" id="email" name="email"
+                        placeholder="Enter your email address" required maxlength="255">
                     <div class="invalid-feedback">Please enter a valid email.</div>
                 </div>
                 <div class="mb-3">
                     <label for="phone" class="form-label">Phone</label>
-                    <input type="tel" class="form-control" id="phone" name="phone" placeholder="Enter your phone number (10 digits)" required pattern="[0-9]{10}">
+                    <input type="tel" class="form-control" id="phone" name="phone"
+                        placeholder="Enter your phone number (10 digits)" required pattern="[0-9]{10}">
                     <div class="invalid-feedback">Phone must be exactly 10 digits.</div>
                 </div>
                 <div class="mb-3">
                     <label for="address" class="form-label">Address</label>
-                    <input type="text" class="form-control" id="address" name="address" placeholder="Enter your address" required maxlength="255">
+                    <input type="text" class="form-control" id="address" name="address" placeholder="Enter your address"
+                        required maxlength="255">
                     <div class="invalid-feedback">Address is required.</div>
                 </div>
-                <div class="mb-3">
-                    <label for="roleName" class="form-label">Role</label>
-                    <select class="form-control" id="roleName" name="roleName" required>
-                        <option value="CUSTOMER">Customer</option>
-                        <option value="ADMIN">Admin</option>
-                    </select>
-                    <div class="invalid-feedback">Please select a role.</div>
-                </div>
+                <!-- Hidden Role Field -->
+                <input type="hidden" id="roleName" name="roleName" value="CUSTOMER">
+
                 <button type="submit" class="btn btn-register">Send OTP</button>
             </form>
+
             <!-- OTP Form -->
-            <form id="otp-form" class="d-none">
+            <form id="otp-form" class="d-none" novalidate>
                 <div class="mb-3">
                     <label for="otp" class="form-label">OTP Code</label>
-                    <input type="text" class="form-control" id="otp" name="otp" placeholder="Enter 6-digit OTP" required minlength="6" maxlength="6">
+                    <input type="text" class="form-control" id="otp" name="otp" placeholder="Enter 6-digit OTP" required
+                        minlength="6" maxlength="6">
                     <div class="invalid-feedback">OTP must be 6 digits.</div>
                 </div>
                 <button type="submit" class="btn btn-register">Verify OTP</button>
@@ -136,7 +154,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom JS -->
     <script>
         const API_BASE_URL = 'http://localhost:8080/auth';
 
@@ -144,9 +161,7 @@
             e.preventDefault();
             const form = e.target;
             form.classList.add('was-validated');
-            if (!form.checkValidity()) {
-                return;
-            }
+            if (!form.checkValidity()) return;
 
             const formData = new FormData(form);
             const data = {
@@ -166,9 +181,7 @@
                 });
 
                 const result = await response.json();
-                if (!response.ok) {
-                    throw new Error(result.message || `HTTP error! Status: ${response.status}`);
-                }
+                if (!response.ok) throw new Error(result.message || `HTTP error! Status: ${response.status}`);
 
                 showNotification('success', result.message || 'OTP sent to your email!');
                 form.classList.add('d-none');
@@ -176,10 +189,11 @@
                 document.getElementById('form-title').textContent = 'Verify OTP';
                 startOtpTimer();
             } catch (error) {
-                const errorMessage = error.message.includes('USER_EXISTED') ? 'Username already exists.' :
-                    error.message.includes('EMAIL_EXISTS') ? 'Email already exists.' :
-                    error.message.includes('INVALID_ROLE') ? 'Invalid role selected.' :
-                    error.message;
+                const errorMessage =
+                    error.message.includes('USER_EXISTED') ? 'Username already exists.' :
+                        error.message.includes('EMAIL_EXISTS') ? 'Email already exists.' :
+                            error.message.includes('INVALID_ROLE') ? 'Invalid role selected.' :
+                                error.message;
                 showNotification('danger', errorMessage);
             }
         });
@@ -188,9 +202,7 @@
             e.preventDefault();
             const form = e.target;
             form.classList.add('was-validated');
-            if (!form.checkValidity()) {
-                return;
-            }
+            if (!form.checkValidity()) return;
 
             const formData = new FormData(form);
             const data = {
@@ -206,17 +218,16 @@
                 });
 
                 const result = await response.json();
-                if (!response.ok) {
-                    throw new Error(result.message || `HTTP error! Status: ${response.status}`);
-                }
+                if (!response.ok) throw new Error(result.message || `HTTP error! Status: ${response.status}`);
 
                 showNotification('success', 'Registration successful! Redirecting to login...');
                 setTimeout(() => window.location.href = 'login.html', 2000);
             } catch (error) {
-                const errorMessage = error.message.includes('INVALID_OTP') ? 'Invalid OTP.' :
-                    error.message.includes('OTP_EXPIRED') ? 'OTP expired.' :
-                    error.message.includes('OTP_NOT_FOUND') ? 'OTP not found.' :
-                    error.message;
+                const errorMessage =
+                    error.message.includes('INVALID_OTP') ? 'Invalid OTP.' :
+                        error.message.includes('OTP_EXPIRED') ? 'OTP expired.' :
+                            error.message.includes('OTP_NOT_FOUND') ? 'OTP not found.' :
+                                error.message;
                 showNotification('danger', errorMessage);
             }
         });
@@ -227,12 +238,14 @@
                 const response = await fetch(`${API_BASE_URL}/send-otp`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ email, username: document.getElementById('username').value, roleName: document.getElementById('roleName').value })
+                    body: JSON.stringify({
+                        email,
+                        username: document.getElementById('username').value,
+                        roleName: document.getElementById('roleName').value
+                    })
                 });
                 const result = await response.json();
-                if (!response.ok) {
-                    throw new Error(result.message || 'Failed to resend OTP');
-                }
+                if (!response.ok) throw new Error(result.message || 'Failed to resend OTP');
                 showNotification('success', 'New OTP sent to your email!');
                 startOtpTimer();
             } catch (error) {
@@ -241,7 +254,7 @@
         }
 
         function startOtpTimer() {
-            let timeLeft = 300; // 5 minutes
+            let timeLeft = 300;
             const timerDisplay = document.createElement('div');
             timerDisplay.className = 'text-center mt-2 text-gray-600';
             document.getElementById('otp-form').appendChild(timerDisplay);
@@ -272,4 +285,5 @@
         }
     </script>
 </body>
+
 </html>
